--- a/pricing.html
+++ b/pricing.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Modulr Pricing | Industrial ops plans</title>
-  <meta name="description" content="Simple, transparent pricing for Modulr. Industrial teams choose a plan and scale with confidence." />
+  <title>Modulr Pricing | Modular systems</title>
+  <meta name="description" content="Pricing that scales with how your business operates. Start with core modules and add capabilities as you grow." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -36,64 +36,166 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Pricing</p>
-          <h1>Plans built for modern ops.</h1>
-          <p>Pick a plan that fits your operations today and grow into automation, analytics, and enterprise controls.</p>
+          <h1>Pricing that scales with how your business actually operates</h1>
+          <p>Start with the systems you need today. Add advanced capabilities only when you’re ready.</p>
+          <ul class="list">
+            <li><span>1</span>Modular systems — no forced bundles</li>
+            <li><span>2</span>Advanced features require solid foundations</li>
+            <li><span>3</span>Built for accuracy, scale, and control</li>
+          </ul>
           <div class="hero-actions">
-            <a class="btn btn-primary" href="contact.html">Talk to sales</a>
-            <a class="btn btn-secondary" href="features.html">View features</a>
+            <a class="btn btn-primary" href="#modules">View Modules</a>
+            <a class="btn btn-secondary" href="#capabilities">Compare Capabilities</a>
           </div>
         </div>
         <div class="hero-card fade-up delay-2">
-          <h3>Every plan includes</h3>
+          <h3>How pricing works</h3>
           <ul class="list">
-            <li><span>1</span>Unlimited inventory transactions</li>
-            <li><span>2</span>Mobile check-in and check-out</li>
-            <li><span>3</span>Real-time availability tracking</li>
-            <li><span>4</span>Audit-ready history</li>
+            <li><span>1</span>Pick one or more core modules</li>
+            <li><span>2</span>Add capability packs as needed</li>
+            <li><span>3</span>Upgrade anytime without re-platforming</li>
+            <li><span>4</span>No artificial user caps</li>
           </ul>
         </div>
       </div>
     </section>
 
-    <section class="section">
+    <section class="section" id="modules">
       <div class="container">
         <div class="section-heading fade-up">
-          <h2>Choose your plan</h2>
-          <p>Annual billing saves 15 percent. All plans include onboarding and success resources.</p>
+          <h2>Core Modules</h2>
+          <p>Each module is a complete system that works independently.</p>
         </div>
         <div class="pricing">
           <div class="price-card fade-up delay-1">
-            <h3>Starter</h3>
-            <div class="price">$199 <small>/ month</small></div>
-            <p class="muted">Best for small teams launching inventory controls.</p>
+            <h3>Inventory Management System (IMS)</h3>
+            <p class="muted">Stock control, movements, reservations, and audit-ready inventory.</p>
             <ul class="list">
-              <li><span>1</span>Up to 5 locations</li>
-              <li><span>2</span>2 admin seats</li>
-              <li><span>3</span>Standard reporting</li>
+              <li><span>1</span>Item master</li>
+              <li><span>2</span>Stock states (available, reserved, checked out)</li>
+              <li><span>3</span>Inventory movements</li>
+              <li><span>4</span>History &amp; traceability</li>
             </ul>
-            <a class="btn btn-secondary" href="contact.html">Start with Starter</a>
+            <div class="price">$49 <small>/ month</small></div>
+            <a class="btn btn-primary" href="contact.html">Start with IMS</a>
           </div>
-          <div class="price-card highlight fade-up delay-2">
-            <h3>Growth</h3>
-            <div class="price">$399 <small>/ month</small></div>
-            <p class="muted">Ideal for teams scaling operations across projects.</p>
+          <div class="price-card fade-up delay-2">
+            <h3>Order Management System (OMS)</h3>
+            <p class="muted">Procurement, vendors, and inbound inventory control.</p>
             <ul class="list">
-              <li><span>1</span>Unlimited locations</li>
-              <li><span>2</span>Advanced audit exports</li>
-              <li><span>3</span>Workflow automation</li>
+              <li><span>1</span>Vendors</li>
+              <li><span>2</span>Purchase orders</li>
+              <li><span>3</span>Order tracking</li>
+              <li><span>4</span>Inbound registration</li>
             </ul>
-            <a class="btn btn-primary" href="contact.html">Choose Growth</a>
+            <div class="price">$39 <small>/ month</small></div>
+            <a class="btn btn-secondary" href="contact.html">Add OMS</a>
           </div>
           <div class="price-card fade-up delay-3">
-            <h3>Enterprise</h3>
-            <div class="price">Custom</div>
-            <p class="muted">For complex supply chains and compliance requirements.</p>
+            <h3>Business Management System (BMS)</h3>
+            <p class="muted">Roles, permissions, workflows, and operational accountability.</p>
             <ul class="list">
-              <li><span>1</span>Dedicated success team</li>
-              <li><span>2</span>Custom integrations</li>
-              <li><span>3</span>Security reviews</li>
+              <li><span>1</span>User roles</li>
+              <li><span>2</span>Access control</li>
+              <li><span>3</span>Workflow visibility</li>
+              <li><span>4</span>Activity tracking</li>
             </ul>
-            <a class="btn btn-secondary" href="contact.html">Contact sales</a>
+            <div class="price">$29 <small>/ month</small></div>
+            <a class="btn btn-secondary" href="contact.html">Add BMS</a>
+          </div>
+          <div class="price-card fade-up delay-4">
+            <h3>Financial Management System (FMS)</h3>
+            <p class="muted">Costs, valuation, and financial clarity tied to real operations.</p>
+            <ul class="list">
+              <li><span>1</span>Inventory valuation</li>
+              <li><span>2</span>Cost tracking</li>
+              <li><span>3</span>Financial reporting</li>
+              <li><span>4</span>Margin visibility</li>
+            </ul>
+            <div class="price">$49 <small>/ month</small></div>
+            <a class="btn btn-secondary" href="contact.html">Add FMS</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="capabilities">
+      <div class="container">
+        <div class="section-heading fade-up">
+          <h2>Advanced Capabilities</h2>
+          <p>Extend your systems with specialized functionality. Requires at least one core module.</p>
+        </div>
+        <div class="pricing">
+          <div class="price-card fade-up delay-1">
+            <h3>Automation Pack</h3>
+            <p class="muted">Automatic stock updates, event-based workflows, and reduced manual actions.</p>
+            <p class="muted"><strong>Requires:</strong> At least 1 core module</p>
+            <div class="price">$25 <small>/ month</small></div>
+          </div>
+          <div class="price-card fade-up delay-2">
+            <h3>Insights Pack</h3>
+            <p class="muted">Operational dashboards, trend analysis, and decision-ready metrics.</p>
+            <p class="muted"><strong>Requires:</strong> At least 1 core module</p>
+            <div class="price">$25 <small>/ month</small></div>
+          </div>
+          <div class="price-card fade-up delay-3">
+            <h3>Audit &amp; Compliance Pack</h3>
+            <p class="muted">Full audit logs, reason codes, and compliance-ready history.</p>
+            <p class="muted"><strong>Requires:</strong> IMS or FMS</p>
+            <div class="price">$30 <small>/ month</small></div>
+          </div>
+          <div class="price-card fade-up delay-4">
+            <h3>Integration Pack</h3>
+            <p class="muted">ERP connectors, API access, and external system sync.</p>
+            <p class="muted"><strong>Requires:</strong> Any core module</p>
+            <div class="price">$40 <small>/ month</small></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="solutions">
+      <div class="container">
+        <div class="section-heading fade-up">
+          <h2>Advanced Operational Solutions</h2>
+          <p>Designed for companies ready to operate with full accuracy and control.</p>
+        </div>
+        <div class="pricing">
+          <div class="price-card highlight fade-up delay-1">
+            <h3>End-to-End Operations Control</h3>
+            <p class="muted">For companies managing physical flow at scale.</p>
+            <ul class="list">
+              <li><span>1</span>IMS + OMS</li>
+              <li><span>2</span>Automation Pack</li>
+              <li><span>3</span>Unified operational visibility</li>
+              <li><span>4</span>Best for warehousing, manufacturing, logistics</li>
+            </ul>
+            <div class="price">$89 <small>/ month</small></div>
+            <a class="btn btn-primary" href="contact.html">View Details</a>
+          </div>
+          <div class="price-card fade-up delay-2">
+            <h3>Financial Accuracy Engine</h3>
+            <p class="muted">For companies that need true cost visibility.</p>
+            <ul class="list">
+              <li><span>1</span>IMS + FMS</li>
+              <li><span>2</span>Insights Pack</li>
+              <li><span>3</span>Accurate valuation &amp; margins</li>
+              <li><span>4</span>Best for COGS-sensitive businesses</li>
+            </ul>
+            <div class="price">$79 <small>/ month</small></div>
+            <a class="btn btn-secondary" href="contact.html">View Details</a>
+          </div>
+          <div class="price-card fade-up delay-3">
+            <h3>Enterprise Governance</h3>
+            <p class="muted">For regulated or fast-scaling organizations.</p>
+            <ul class="list">
+              <li><span>1</span>BMS</li>
+              <li><span>2</span>Audit &amp; Compliance</li>
+              <li><span>3</span>Advanced permissions &amp; controls</li>
+              <li><span>4</span>Best for regulated operations</li>
+            </ul>
+            <div class="price">Custom</div>
+            <a class="btn btn-secondary" href="contact.html">Talk to Sales</a>
           </div>
         </div>
       </div>
@@ -102,19 +204,42 @@
     <section class="section">
       <div class="container split">
         <div class="fade-up">
-          <h2>Need a tailored rollout?</h2>
-          <p class="muted">We design onboarding plans, data migration, and training for multi-site teams.</p>
-          <ul class="list">
-            <li><span>1</span>Dedicated implementation manager</li>
-            <li><span>2</span>Custom integrations and import templates</li>
-            <li><span>3</span>Quarterly strategy reviews</li>
-          </ul>
+          <h2>Built to Scale Without Breaking</h2>
+          <p class="muted">Every advanced feature is built on a correct operational foundation.</p>
         </div>
         <div class="contact-card fade-up delay-2">
-          <h3>Pricing FAQ</h3>
-          <p class="muted">All plans include unlimited transactions and core inventory features.</p>
-          <p class="muted">Need more seats or locations? We scale with you as you grow.</p>
-          <a class="btn btn-secondary" href="contact.html">Ask about pricing</a>
+          <ul class="list">
+            <li><span>1</span>Start Simple — Choose the systems you need today</li>
+            <li><span>2</span>Add Capabilities — Enhance without re-platforming</li>
+            <li><span>3</span>Operate at Full Control — Accuracy, automation, and insight</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="faq">
+      <div class="container">
+        <div class="section-heading fade-up">
+          <h2>Pricing FAQ</h2>
+          <p>Remove friction and get clarity fast.</p>
+        </div>
+        <div class="pricing">
+          <div class="price-card fade-up delay-1">
+            <h3>Do I have to buy all modules?</h3>
+            <p class="muted">No. Each module works independently.</p>
+          </div>
+          <div class="price-card fade-up delay-2">
+            <h3>Can I add or remove modules later?</h3>
+            <p class="muted">Yes — upgrade or downgrade anytime.</p>
+          </div>
+          <div class="price-card fade-up delay-3">
+            <h3>Why do some features require multiple modules?</h3>
+            <p class="muted">Because advanced functionality depends on correct underlying data.</p>
+          </div>
+          <div class="price-card fade-up delay-4">
+            <h3>Are there user limits?</h3>
+            <p class="muted">No artificial user caps.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -123,12 +248,12 @@
       <div class="container">
         <div class="cta-strip fade-up">
           <div>
-          <h2>Ready to deploy?</h2>
-          <p>Set up your workspace in days, not weeks.</p>
+            <h2>Start with what you need. Grow without rebuilding.</h2>
+            <p>Build your stack at your pace, without rewrites.</p>
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
-            <a class="btn btn-secondary" href="contact.html">Schedule a call</a>
-            <a class="btn btn-primary" data-app-link href="/app/login.html">Go to App</a>
+            <a class="btn btn-primary" href="contact.html">Get Started</a>
+            <a class="btn btn-secondary" href="contact.html">Request a demo</a>
           </div>
         </div>
       </div>
@@ -140,9 +265,9 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Modular operations</span></div>
         </div>
-        <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
+        <p class="muted">Modular systems for inventory, operations, and control.</p>
       </div>
       <div class="footer-links">
         <strong>Product</strong>
