Enhance pricing page layout and update descriptions for clarity

--- a/pricing.html
+++ b/pricing.html
@@ -64,9 +64,9 @@
       <div class="container">
         <div class="section-heading fade-up">
           <h2>Core Modules</h2>
-          <p>Each module is a complete system that works independently.</p>
+          <p>Each module delivers full value on its own. Add capabilities only when they improve your workflow.</p>
         </div>
-        <div class="pricing">
+        <div class="pricing modular">
           <div class="price-card fade-up delay-1">
             <h3>Inventory Management System (IMS)</h3>
             <p class="muted">Stock control, movements, reservations, and audit-ready inventory.</p>
@@ -77,7 +77,7 @@
               <li><span>4</span>History &amp; traceability</li>
             </ul>
             <div class="price">$49 <small>/ month</small></div>
-            <a class="btn btn-primary" href="contact.html">Start with IMS</a>
+            <a class="btn btn-primary" href="contact.html">Select IMS</a>
           </div>
           <div class="price-card fade-up delay-2">
             <h3>Order Management System (OMS)</h3>
@@ -89,7 +89,7 @@
               <li><span>4</span>Inbound registration</li>
             </ul>
             <div class="price">$39 <small>/ month</small></div>
-            <a class="btn btn-secondary" href="contact.html">Add OMS</a>
+            <a class="btn btn-secondary" href="contact.html">Select OMS</a>
           </div>
           <div class="price-card fade-up delay-3">
             <h3>Business Management System (BMS)</h3>
@@ -101,7 +101,7 @@
               <li><span>4</span>Activity tracking</li>
             </ul>
             <div class="price">$29 <small>/ month</small></div>
-            <a class="btn btn-secondary" href="contact.html">Add BMS</a>
+            <a class="btn btn-secondary" href="contact.html">Select BMS</a>
           </div>
           <div class="price-card fade-up delay-4">
             <h3>Financial Management System (FMS)</h3>
@@ -113,7 +113,7 @@
               <li><span>4</span>Margin visibility</li>
             </ul>
             <div class="price">$49 <small>/ month</small></div>
-            <a class="btn btn-secondary" href="contact.html">Add FMS</a>
+            <a class="btn btn-secondary" href="contact.html">Select FMS</a>
           </div>
         </div>
       </div>
@@ -123,31 +123,31 @@
       <div class="container">
         <div class="section-heading fade-up">
           <h2>Advanced Capabilities</h2>
-          <p>Extend your systems with specialized functionality. Requires at least one core module.</p>
+          <p>Extend your system with specialized functionality. Each pack adds value on its own when you’re ready to upgrade.</p>
         </div>
-        <div class="pricing">
+        <div class="pricing capability-grid">
           <div class="price-card fade-up delay-1">
             <h3>Automation Pack</h3>
             <p class="muted">Automatic stock updates, event-based workflows, and reduced manual actions.</p>
-            <p class="muted"><strong>Requires:</strong> At least 1 core module</p>
+            <p class="muted"><strong>Works with:</strong> Any core module</p>
             <div class="price">$25 <small>/ month</small></div>
           </div>
           <div class="price-card fade-up delay-2">
             <h3>Insights Pack</h3>
             <p class="muted">Operational dashboards, trend analysis, and decision-ready metrics.</p>
-            <p class="muted"><strong>Requires:</strong> At least 1 core module</p>
+            <p class="muted"><strong>Works with:</strong> Any core module</p>
             <div class="price">$25 <small>/ month</small></div>
           </div>
           <div class="price-card fade-up delay-3">
             <h3>Audit &amp; Compliance Pack</h3>
             <p class="muted">Full audit logs, reason codes, and compliance-ready history.</p>
-            <p class="muted"><strong>Requires:</strong> IMS or FMS</p>
+            <p class="muted"><strong>Works with:</strong> IMS or FMS</p>
             <div class="price">$30 <small>/ month</small></div>
           </div>
           <div class="price-card fade-up delay-4">
             <h3>Integration Pack</h3>
             <p class="muted">ERP connectors, API access, and external system sync.</p>
-            <p class="muted"><strong>Requires:</strong> Any core module</p>
+            <p class="muted"><strong>Works with:</strong> Any core module</p>
             <div class="price">$40 <small>/ month</small></div>
           </div>
         </div>
@@ -160,7 +160,7 @@
           <h2>Advanced Operational Solutions</h2>
           <p>Designed for companies ready to operate with full accuracy and control.</p>
         </div>
-        <div class="pricing">
+        <div class="pricing solution-grid">
           <div class="price-card highlight fade-up delay-1">
             <h3>End-to-End Operations Control</h3>
             <p class="muted">For companies managing physical flow at scale.</p>
@@ -223,7 +223,7 @@
           <h2>Pricing FAQ</h2>
           <p>Remove friction and get clarity fast.</p>
         </div>
-        <div class="pricing">
+        <div class="pricing faq-grid">
           <div class="price-card fade-up delay-1">
             <h3>Do I have to buy all modules?</h3>
             <p class="muted">No. Each module works independently.</p>
