Add PWA installation prompt and UI elements for app installation

--- a/settings.html
+++ b/settings.html
@@ -78,6 +78,14 @@
             <div class="form-row">
               <button id="appearanceSave" type="button" class="settings-action">Save Appearance</button>
             </div>
+            <div class="inventory-card" style="margin-top:16px;">
+              <h4>Install App</h4>
+              <p class="muted-text">Install IMS as a PWA for faster access and offline status.</p>
+              <div class="form-row">
+                <button id="installAppBtn" type="button" class="settings-action">Install App</button>
+                <span id="installAppMsg" class="muted-text"></span>
+              </div>
+            </div>
           </div>
 
           <div id="panelProfile" class="settings-panel" style="display:none;">
