--- a/dashboard.html
+++ b/dashboard.html
@@ -25,7 +25,7 @@
       </div>
                   <nav>
         <a class="active" href="dashboard.html" data-role="admin">Dashboard</a>
-        <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
+        <a  href="ops-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="field-purchase.html" >Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
