--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -33,7 +33,7 @@
       </div>
                   <nav>
         <a  href="dashboard.html" data-role="admin">Dashboard</a>
-        <a class="active" href="employee-dashboard.html" data-role="employee">Dashboard</a>
+        <a class="active" href="ops-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
         <a href="field-purchase.html" >Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
